--- a/main.css
+++ b/main.css
@@ -25,11 +25,11 @@ a:hover{color:darkblue;
 		}
 .sidenav {
     margin: 0;
-    padding-top: 0px;
+    padding: 10px 0px 10px 0px;
     background-color: white;
     border: 1px solid #fff;
-    
-    box-shadow:0px 0px 3px #dfdfdf;
+
+    box-shadow:1px 1px 3px 2px #dfdfdf;
     position:relative;
     height: 100%;
     font-size:20px;
@@ -37,13 +37,15 @@ a:hover{color:darkblue;
 
 .sidenav li a {
     color: #385b9f;
-    padding: 8px 16px;
+    padding-left:20px;
     text-decoration: none;
+    
 }
 
 .sidenav li {display: block;
     text-align:left;
-    padding-left:30px;
+    padding:5px 0px 5px 0px;
+    border-bottom:2px solid #eee;
    
 }
 
@@ -66,14 +68,19 @@ a:hover{color:darkblue;
 	.navbar-inverse .navbar-nav > .open > a,
 	.navbar-inverse .navbar-nav > .open > a:hover,
 	.navbar-inverse .navbar-nav > .open > a:focus {
-  	color: #000;
+  	color: #7f909a;
   	background-color: #fff;
+  	position:relative;
+  	
   	}
   	
 
   	
   	.dropdown {padding-right:20px;
-  				
+  				 
+  	}
+  	
+	.dropdown>a>img{margin-bottom:10px;
   	}
   	
   	.dropdown-menu{background-color:#385b9f;
@@ -101,6 +108,14 @@ a:hover{color:darkblue;
   	.dropdown:hover .dropdown-menu {display: inline-block;
   									left:20px;
     }
+    
+    
+    .navbar-nav .open .dropdown-menu{
+    								display:none;
+    }
+    
+    .navbar-nav .open > li {color:black;
+    }
   	
   	.carousel{height:300px;
   	}
@@ -110,3 +125,29 @@ a:hover{color:darkblue;
       height:300px;
 	}
 	
+.picbar {width:100%;
+			height:300px;
+			background-color:#fff;
+			position:relative;
+	
+}
+
+.picbar ul li {display:inline;
+				padding:70px;
+}
+.picbar{padding-top:30px;
+}
+  
+.piclist>li>a {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+}
+
+.caption {
+    display: block;
+    text-align:center;
+    left:50px;
+}
+ 
